force-app/main/default/objects/Claim__c/Claim__c.object-meta.xml
<CustomObject>
    <label>ClaimEmployee</label>
    <nameField>
        <displayFormat>CLAIM-{0000}</displayFormat>
        <label>Claim ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claims</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>