force-app/main/default/objects/Claim__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>