force-app/main/default/objects/Claim__c/fields/Receipt__c.field-meta.xml
<CustomField>
    <fullName>Receipt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receipt</label>
    <type>Checkbox</type>
</CustomField>