force-app/main/default/objects/Claim__c/fields/Submitted_To__c.field-meta.xml
<CustomField>
    <fullName>Submitted_To__c</fullName>
    <label>Submitted To</label>
    <length>90</length>
    <type>Text</type>
</CustomField>