force-app/main/default/objects/Claim__c/validationRules/Amount_Greater_Than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Greater_Than_Zero</fullName>
    <active>true</active>
    <description>Amount must be greater than zero</description>
    <errorConditionFormula>OR(
  ISBLANK(Amount__c),
  Amount__c &lt;= 0
)</errorConditionFormula>
    <errorMessage>Amount must be greater than zero</errorMessage>
</ValidationRule>