force-app/main/default/objects/Claim__c/validationRules/No_Status_Reversal.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Status_Reversal</fullName>
    <active>true</active>
    <description>you cannot change status from Approved to Pending/Rejected or from Rejected to Approved/Pending</description>
    <errorConditionFormula>AND(
  OR(
    TEXT(PRIORVALUE(Status__c)) = &quot;Approved&quot;, 
    TEXT(PRIORVALUE(Status__c)) = &quot;Rejected&quot;
  ),  
  ISCHANGED(Status__c)
)</errorConditionFormula>
    <errorMessage>you cannot change status from Approved to Pending/Rejected or from Rejected to Approved/Pending</errorMessage>
</ValidationRule>