force-app/main/default/objects/Claim__c/validationRules/Receipt_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Receipt_Required</fullName>
    <active>true</active>
    <description>Receipt checkbox must be checked.</description>
    <errorConditionFormula>NOT( Receipt__c )</errorConditionFormula>
    <errorMessage>Receipt checkbox must be checked.</errorMessage>
</ValidationRule>