force-app/main/default/objects/Claim__c/validationRules/Reimbursement_Date_Not_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Reimbursement_Date_Not_Future</fullName>
    <active>true</active>
    <description>Submission date should not be in the future.</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Submission_Date__c)),
   DATEVALUE( Settlement_Date__c )  &gt; TODAY()
)</errorConditionFormula>
    <errorMessage>Submission date should not be in the future.</errorMessage>
</ValidationRule>