force-app/main/default/objects/Claim__c/validationRules/The_Correct_Employee_Manager_of_the_Rela.validationRule-meta.xml
<ValidationRule>
    <fullName>The_Correct_Employee_Manager_of_the_Rela</fullName>
    <active>true</active>
    <errorConditionFormula>Employee_Manager__r.Id  &lt;&gt;  Employee__r.Employee_Manager__r.Related_User__r.Id</errorConditionFormula>
    <errorMessage>error Please Select the Correct Employee Manager of the Related Employee</errorMessage>
</ValidationRule>