force-app/main/default/objects/Claim__c/validationRules/Travel_Dates_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Travel_Dates_Required</fullName>
    <active>true</active>
    <description>If Type = &quot;Travel&quot;, then both Start Date and To Date must

be filled.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Type__c, &quot;Travel&quot;),
  OR(
    ISBLANK( From_Date__c ),
    ISBLANK( To_Date__c )
  )
)</errorConditionFormula>
    <errorMessage>If Type = &quot;Travel&quot;, then both Start Date and To Date must

be filled.</errorMessage>
</ValidationRule>