force-app/main/default/objects/Claim__c/listViews/Account_Manager_Finance_Claim.listView-meta.xml
<ListView>
    <fullName>Account_Manager_Finance_Claim</fullName>
    <filterScope>Queue</filterScope>
    <label>Account Manager (Finance)</label>
    <queue>Account_Manager_Finance</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>