force-app/main/default/objects/Claim__c/listViews/All_Pending_Records.listView-meta.xml
<ListView>
    <fullName>All_Pending_Records</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>Submitted_To__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>All Pending Records</label>
</ListView>