force-app/main/default/objects/Claim__c/listViews/All_Settled_Records.listView-meta.xml
<ListView>
    <fullName>All_Settled_Records</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>Settlement_Date__c</columns>
    <columns>Payment_Mode__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Settled</value>
    </filters>
    <label>All Settled Records</label>
</ListView>